bug fix / UI update / new feature added

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,9 @@
-# Frontend Environment Variables (.env.production)
-# API URL for production
-VITE_API_URL=https://your-backend-domain.com/api
+# ============================================
+# FRONTEND ENVIRONMENT VARIABLES
+# Copy to .env.production for production builds
+# ============================================
+
+# === BACKEND API URL ===
+# For local development: http://localhost:5000
+# For Render production: https://your-backend-name.onrender.com
+VITE_API_URL=https://your-backend-url.onrender.com
