--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,25 +1,50 @@
-# Backend Environment Variables (Copy to .env)
-# Database
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/databasename?retryWrites=true&w=majority
+# ============================================
+# BACKEND ENVIRONMENT VARIABLES
+# Copy this file to .env and fill in your values
+# ============================================
 
-# JWT
-JWT_SECRET=your_super_secret_jwt_key_here_change_this_in_production
-JWT_EXPIRE=7d
+# === DATABASE ===
+# MongoDB Atlas Connection String
+# Get it from: https://www.mongodb.com/cloud/atlas
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/dbname?retryWrites=true&w=majority
 
-# Email Configuration (Gmail SMTP)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your_gmail@gmail.com
-SMTP_PASS=your_app_specific_password_here
-
-# Email sender
-EMAIL_FROM=noreply@yourapp.com
-
-# Node Environment
+# === SERVER ===
+# Node environment (development or production)
 NODE_ENV=production
-
-# Server Port
 PORT=5000
 
-# Frontend URL (for email reset links)
-FRONTEND_URL=https://your-frontend-domain.com
+# === FRONTEND URL (CRITICAL FOR RENDER) ===
+# Your deployed frontend URL on Render
+# Example: https://myapp-frontend.onrender.com
+FRONTEND_URL=https://your-frontend-url.onrender.com
+
+# === JWT ===
+# Secret key for JWT tokens (use a strong random string)
+JWT_SECRET=your-super-secret-jwt-key-change-this
+JWT_EXPIRE=7d
+
+# === SMTP EMAIL CONFIGURATION ===
+# For Gmail: Use App Password (NOT your regular password)
+# 1. Enable 2-Factor Authentication on your Gmail account
+# 2. Generate an App Password: https://myaccount.google.com/apppasswords
+# 3. Copy the 16-character password here
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=xxxx xxxx xxxx xxxx
+EMAIL_FROM=your-email@gmail.com
+
+# === PASSWORD RESET ===
+# How long reset link stays valid (in minutes)
+RESET_TOKEN_EXPIRY=15
+
+# ============================================
+# IMPORTANT NOTES FOR RENDER DEPLOYMENT:
+# ============================================
+# 1. Go to your Render service dashboard
+# 2. Click "Environment" tab
+# 3. Add all variables above
+# 4. Make sure FRONTEND_URL points to your frontend Render URL
+# 5. Restart the service after adding variables
+
